--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="pais">Brasil</string>
     <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
     <string name="imagem_do_local">Imagem do local</string>
+    <string name="preco_final">Preço final:</string>
+    <string name="realizar_pagamento">Realizar pagamento</string>
+    <string name="imagem_do_pacote">imagem do pacote</string>
 </resources>
